--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,24 @@
         {# MEDIUM STYLE EDITOR#}
         <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
         <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+        
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/medium-editor/dist/css/medium-editor.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/medium-editor/dist/css/themes/default.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/medium-editor"></script> -->
+
+        <!-- <textarea id="editor" name="content"></textarea>
+
+        <script>
+            var editor = new MediumEditor('#editor', {
+                toolbar: {
+                    buttons: ['bold', 'italic', 'underline', 'h2', 'h3', 'quote']
+                },
+                placeholder: {
+                    text: 'Write something...',
+                    hideOnClick: true
+                }
+            });
+        </script> -->
 
 
         {# Custom CSS#}
@@ -49,7 +67,18 @@
           <a href="{% url 'post_draft_list' %}">Drafts</a>
         </li>
         <li>
-          <a href="{% url 'logout' %}" >Log out</a>
+          <!-- <a href="{% url 'logout' %}" >Log out</a> -->
+          <a href="#" onclick="logoutUser(); return false;">Logout</a>
+
+          <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+              {% csrf_token %}
+          </form>
+          
+          <script>
+          function logoutUser() {
+              document.getElementById("logout-form").submit();
+          }
+          </script>
         </li>
 
         <li>
